--- a/views/food.hbs
+++ b/views/food.hbs
@@ -1,30 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <table>
+{{#extends 'base'}}
+
+{{#block 'content'}}
+<h1>All Food</h1>
+<a href="/food/add" class="btn btn-primary mt-3 mb-3">Add Food</a>
+    <table class="table">
         <thead>
             <tr>
-                <th>Date</th>
                 <th>Name</th>
                 <th>Meal</th>
                 <th>Calories</th>
                 <th>Tags</th>
+                <th>Date</th>
             </tr>
         </thead>
         {{#each foodRecords}}
             <tr>
-                <th>{{this.date}}</th>
-                <th>{{this.name}}</th>
-                <th>{{this.meal}}</th>
-                <th>{{this.calories}}</th>
-                <th>{{this.tags}}</th>
+                <td>{{this.name}}</td>
+                <td>{{this.meal}}</td>
+                <td>{{this.calories}}</td>
+                <td>{{this.tags}}</td>
+                <td>{{ date this.date "Do MMMM YYYY"}}</td>
+                <td><a href="/food/{{this._id}}/update" class="btn btn-primary">Edit</a></td>
+                <td><a href="/food/{{this._id}}/delete" class="btn btn-danger">Delete</a></td>
             </tr>
         {{/each}}
     </table>
-</body>
-</html>
+{{/block}}
+
+{{/extends}}
